--- a/styles/styles.css
+++ b/styles/styles.css
@@ -610,15 +610,15 @@ footer{
   /* SERVICIOS */
   .grid__sE{
     grid-template-columns: repeat(6,1fr);
-    grid-template-rows: repeat(4,1fr);
+    grid-template-rows: repeat(6,1fr);
     padding-top: 0;
     padding-left: 20px;
     padding-right: 20px;
     column-gap: 1.5em;
-    row-gap: 1.5em;
+    row-gap: 1.8em;
   }
   .contenedor:nth-of-type(1){
-    grid-column: 1 / 7;
+    grid-column: 2 / 6;
     grid-row: 1 / 1;
     width: 100%;
     font-size: 15px;
@@ -629,28 +629,35 @@ footer{
     text-transform: none;
   }
   .contenedor:nth-of-type(2){
-    grid-column: 1 / 4 ;
+    grid-column: 2 / 6 ;
     grid-row: 2 / 3;
+    height: 100px;
+    
   }
   .contenedor:nth-of-type(3){
-    grid-column: 4 / 7;
-    grid-row: 2 / 3;
+    grid-column: 2 / 6;
+    grid-row: 3 / 4;
+    height: 100px;
   }
   .contenedor:nth-of-type(4){
-    grid-column: 1 / 4;
-    grid-row: 3 / 4;
+    grid-column: 2 / 6;
+    grid-row: 4 / 5;
+    height: 100px;
   }
   .contenedor:nth-of-type(5){
-    grid-column: 4 /7 ;
-    grid-row: 3 / 4;
+    grid-column: 2 /6 ;
+    grid-row: 5 / 6;
+    height: 100px;
   }
   .grid__sE div img{
     width: 100%;
-    height: 50%;
+    height: 100%;
+    object-fit: cover;
+    
   }
   .grid__sE div h3{
     font-size: 10px;
-    padding-top: 15px;
+    padding-top: 5px;
     letter-spacing: 0.3em;
   }
   /* SKILLS */
@@ -936,15 +943,15 @@ footer{
   /* SERVICIOS */
   .grid__sE{
     grid-template-columns: repeat(6,1fr);
-    grid-template-rows: repeat(4,1fr);
+    grid-template-rows: repeat(6,1fr);
     padding-top: 0;
     padding-left: 20px;
     padding-right: 20px;
     column-gap: 1.5em;
-    row-gap: 1.5em;
+    row-gap: 1.8em;
   }
   .contenedor:nth-of-type(1){
-    grid-column: 1 / 7;
+    grid-column: 2 / 6;
     grid-row: 1 / 1;
     width: 100%;
     font-size: 15px;
@@ -955,28 +962,35 @@ footer{
     text-transform: none;
   }
   .contenedor:nth-of-type(2){
-    grid-column: 1 / 4 ;
+    grid-column: 2 / 6 ;
     grid-row: 2 / 3;
+    height: 100px;
+    
   }
   .contenedor:nth-of-type(3){
-    grid-column: 4 / 7;
-    grid-row: 2 / 3;
+    grid-column: 2 / 6;
+    grid-row: 3 / 4;
+    height: 100px;
   }
   .contenedor:nth-of-type(4){
-    grid-column: 1 / 4;
-    grid-row: 3 / 4;
+    grid-column: 2 / 6;
+    grid-row: 4 / 5;
+    height: 100px;
   }
   .contenedor:nth-of-type(5){
-    grid-column: 4 /7 ;
-    grid-row: 3 / 4;
+    grid-column: 2 /6 ;
+    grid-row: 5 / 6;
+    height: 100px;
   }
   .grid__sE div img{
     width: 100%;
-    height: 50%;
+    height: 100%;
+    object-fit: cover;
+    
   }
   .grid__sE div h3{
     font-size: 10px;
-    padding-top: 15px;
+    padding-top: 5px;
     letter-spacing: 0.3em;
   }
   /* SKILLS */
