--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,8 +53,21 @@ footer{
 .cabecera__ul li a{
   text-decoration: none;
   color: #ffff;
+  --clippy:polygon(0 0, 0 0, 0 100%, 0% 100%);
 }
-
+.cabecera__ul li a::after{
+  content: "";
+  display: block;
+  background: #ffff;
+  width: 90%;
+  margin-top: 3px;
+  height: 1.5px;
+  clip-path: var(--clippy);
+  transition: clip-path .4s;
+}
+.cabecera__ul li a:hover{
+  --clippy:polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
 /* MAIN */
 .grid{
   display: grid;
@@ -447,6 +460,24 @@ footer{
   .cabecera__ul li{    
     list-style-type: none;
   }
+  .cabecera__ul li a{
+    text-decoration: none;
+    color: #ffff;
+    --clippy:polygon(0 0, 0 0, 0 100%, 0% 100%);
+  }
+  .cabecera__ul li a::after{
+    content: "";
+    display: block;
+    background: #ffff;
+    width: 90%;
+    margin-top: 3px;
+    height: 1.5px;
+    clip-path: var(--clippy);
+    transition: clip-path .2s;
+  }
+  .cabecera__ul li a:hover{
+    --clippy:polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
   /* CUERPO */
   main{
     grid-area: main;
@@ -778,6 +809,24 @@ footer{
     font-size: 0.8rem;
     width: 300px;
     gap: 15px;
+  }
+  .cabecera__ul li a{
+    text-decoration: none;
+    color: #ffff;
+    --clippy:polygon(0 0, 0 0, 0 100%, 0% 100%);
+  }
+  .cabecera__ul li a::after{
+    content: "";
+    display: block;
+    background: #ffff;
+    width: 90%;
+    margin-top: 3px;
+    height: 1.5px;
+    clip-path: var(--clippy);
+    transition: clip-path .2s;
+  }
+  .cabecera__ul li a:hover{
+    --clippy:polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
   /* CUERPO */
   main{
