--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
 /* INDEX */
 .grilla{
   display: grid;
-  grid-template-areas: 
+  grid-template-areas:
   "header header header"
   "main main main"
   "footer footer footer";
@@ -145,7 +145,7 @@ footer{
 }
 .pie__ul li{
   text-decoration: none;
-  list-style-type: none; 
+  list-style-type: none;
 }
 
 /* SOBRE MI */
@@ -167,7 +167,7 @@ footer{
   padding-bottom: 2rem;
   letter-spacing: 0.5cm;
   color: rgb(63, 63, 63);
-} 
+}
 .grid__contenido:nth-of-type(2){
   grid-column: 2 / 6;
   grid-row: 3 / 6;
@@ -211,7 +211,7 @@ footer{
 /* PORFOLIO */
 .grid__pO{
   display: grid;
-  grid-template-areas: 
+  grid-template-areas:
   "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3"
   "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3"
   "imagen2 imagen2 imagen2 imagen2 imagen3 imagen3 imagen3 imagen3 imagen3";
@@ -255,7 +255,7 @@ footer{
   -webkit-transform: scale(102%);
 	transform: scale(102%);
   filter: opacity(0.9);
-} 
+}
 
 /* SERVICIOS */
 .grid__sE{
@@ -286,33 +286,146 @@ footer{
 .contenedor:nth-of-type(2){
   grid-column: 2 / 6 ;
   grid-row: 2 / 3;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+}
+.contenedor:nth-of-type(2)::before{
+  content: "Diseño";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.479);
+  color: rgb(211, 211, 211);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  letter-spacing: 0.3em;
+  clip-path: var(--clippy2);
+  transition: clip-path .4s ease-in-out;
+}
+.contenedor:nth-of-type(2):hover{
+  --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
 }
 .contenedor:nth-of-type(3){
   grid-column: 6 / 10;
   grid-row: 3 / 3;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+}
+.contenedor:nth-of-type(3)::before{
+  content: "Edición";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.479);
+  color: rgb(211, 211, 211);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  letter-spacing: 0.3em;
+  clip-path: var(--clippy2);
+  transition: clip-path .4s ease-in-out;
+}
+.contenedor:nth-of-type(3):hover{
+  --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
 }
 .contenedor:nth-of-type(4){
   grid-column: 10 / 14;
   grid-row: 2 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 }
+.contenedor:nth-of-type(4)::before{
+  content: "Animación";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.479);
+  color: rgb(211, 211, 211);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  letter-spacing: 0.3em;
+  clip-path: var(--clippy2);
+  transition: clip-path .4s ease-in-out;
+}
+.contenedor:nth-of-type(4):hover{
+  --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+}
+
 .contenedor:nth-of-type(5){
   grid-column: 14 / 18;
   grid-row: 3 / 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 }
-.grid__sE div img{
-  width: 90%;
-  height: 90%;
+.contenedor:nth-of-type(5)::before{
+  content: "Foto y Video";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.479);
+  color: rgb(211, 211, 211);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  letter-spacing: 0.3em;
+  clip-path: var(--clippy2);
+  transition: clip-path .4s ease-in-out;
+}
+.contenedor:nth-of-type(5):hover{
+  --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+}
+
+.contenedor img{
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
+
 .grid__sE div h1{
   color: rgb(63, 63, 63);
+  cursor: default;
 }
 .grid__sE div h3{
-  padding-top: 0.5em;
-  letter-spacing: 0.5em;
-  color: rgba(34, 34, 34, 0.76);
+  visibility: hidden;
+  position: absolute;
+  text-align: center;
+  /* padding-top: 0.5em; */
+  letter-spacing: 0.3em;
+  color: rgba(0, 0, 0, 0.76);
 }
+
+
 /* SKILLS */
 .grid__sK{
   display: grid;
@@ -432,7 +545,7 @@ footer{
 /* INDEX */
 @media screen and (max-width: 480px){
   .grilla{
-    grid-template-areas: 
+    grid-template-areas:
     "header "
     "main"
     "footer";
@@ -456,7 +569,7 @@ footer{
     width: 300px;
     gap: 15px;
   }
-  .cabecera__ul li{    
+  .cabecera__ul li{
     list-style-type: none;
   }
   .cabecera__ul li a{
@@ -548,7 +661,7 @@ footer{
   }
   .pie__ul li{
     text-decoration: none;
-    list-style-type: none; 
+    list-style-type: none;
   }
   /* SOBRE MI */
   .grid__sM{
@@ -563,8 +676,8 @@ footer{
     align-items: center;
     padding-bottom: 2rem;
     letter-spacing: 0.5cm;
-    height: 100px; 
-  } 
+    height: 100px;
+  }
   .grid__contenido:nth-of-type(2){
     grid-column: 2 / 6;
     grid-row: 2 / 6;
@@ -630,7 +743,7 @@ footer{
     -webkit-transform: scale(102%);
     transform: scale(102%);
     opacity: 1;
-  } 
+  }
   .pO__titulo{
     font-size: 12px;
     padding-top: 1rem;
@@ -662,7 +775,7 @@ footer{
     grid-column: 2 / 6 ;
     grid-row: 2 / 3;
     height: 100px;
-    
+
   }
   .contenedor:nth-of-type(3){
     grid-column: 2 / 6;
@@ -683,9 +796,10 @@ footer{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
+
   }
   .grid__sE div h3{
+    visibility: visible;
     font-size: 10px;
     padding-top: 5px;
     letter-spacing: 0.3em;
@@ -789,7 +903,7 @@ footer{
 @media screen and (min-width: 481px) and (max-width: 760px) {
   /* INDEX */
   .grilla{
-    grid-template-areas: 
+    grid-template-areas:
     "header "
     "main "
     "footer";
@@ -898,7 +1012,7 @@ footer{
   }
   .pie__ul li{
     text-decoration: none;
-    list-style-type: none; 
+    list-style-type: none;
   }
   /* SOBRE MI */
   .grid__sM{
@@ -913,8 +1027,8 @@ footer{
     align-items: center;
     padding-bottom: 2rem;
     letter-spacing: 0.5cm;
-    height: 100px; 
-  } 
+    height: 100px;
+  }
   .grid__contenido:nth-of-type(2){
     grid-column: 2 / 6;
     grid-row: 2 / 6;
@@ -987,7 +1101,7 @@ footer{
     -webkit-transform: scale(102%);
     transform: scale(102%);
     opacity: 1;
-  } 
+  }
   /* SERVICIOS */
   .grid__sE{
     grid-template-columns: repeat(6,1fr);
@@ -1013,7 +1127,7 @@ footer{
     grid-column: 2 / 6 ;
     grid-row: 2 / 3;
     height: 100px;
-    
+
   }
   .contenedor:nth-of-type(3){
     grid-column: 2 / 6;
@@ -1034,7 +1148,7 @@ footer{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
+
   }
   .grid__sE div h3{
     font-size: 10px;
@@ -1132,7 +1246,7 @@ footer{
   #boton:hover{
     cursor: pointer;
   }
-} 
+}
 
 
 
