--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,7 +99,23 @@
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
+/* PORFOLIO */
+.main-pO{
+  height: 100vh;
+  background-color: rgba(211, 150, 106, 0.466);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.carousel{
+  /* width: 100%; */
+  display: flex;
+  justify-content: center;
+}
 
+.carousel-inner{
+  width: 50%;
+}
 /* .grilla{
   display: grid;
   grid-template-areas:
