--- a/styles/styles.css
+++ b/styles/styles.css
@@ -997,12 +997,12 @@ footer{
     align-items: flex-start;
   }
   .pie h2{
-    font-size: 0.6rem;
+    font-size: 0.9rem;
     font-weight: 120px;
     color: rgb(63, 63, 63);
   }
   .pie img{
-    max-width: 1rem;
+    max-width: 2rem;
   }
   .pie__ul{
     display: flex;
@@ -1161,6 +1161,7 @@ footer{
     grid-template-rows: repeat(4, 1fr) ;
     padding-left: 80px ;
     padding-right: 80px;
+    padding-bottom: 100px;
     column-gap: 50px;
     row-gap: 40px;
   }
@@ -1183,6 +1184,7 @@ footer{
   .id{
     grid-column:  1 / 1;
     grid-row: 3/4;
+    
   }
   .lr{
     grid-column: 2 / 2;
@@ -1192,6 +1194,12 @@ footer{
     font-weight: 100;
     padding: 1rem;
     font-size: 15px;
+  }
+  .grid__sK div img{
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
+    overflow: hidden;
   }
   .grid__sK div h3{
     display: flex;
