--- a/styles/partials/_contacto.scss
+++ b/styles/partials/_contacto.scss
@@ -5,60 +5,120 @@
     height: 100vh;
     column-gap: 10px;
     background-color: rgba(211, 150, 106, 0.466);
+
+    .contacto h1 {
+        color: rgba(34, 34, 34, 0.76);
+        letter-spacing: 5px;
+    }
+
+    .contacto:nth-of-type(1) {
+        grid-column: 3/4;
+        grid-row: 2/5;
+    }
+
+    .formulario:nth-of-type(2) {
+        margin: auto;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        width: 400px;
+        grid-column: 5/9;
+        grid-row: 2/5;
+        padding: 30px;
+        border-radius: 10px;
+        background-color: rgb(255, 255, 255);
+        box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+    }
+
+    .formulario {
+
+        input,
+        textarea {
+            width: 100%;
+            margin-top: 10px;
+            margin-bottom: 15px;
+            padding: 7px;
+            box-sizing: border-box;
+            border: none;
+            border-bottom: 1px solid rgba(77, 77, 77, 0.767);
+        }
+
+        label {
+            font-size: 15px;
+        }
+
+        textarea {
+            height: 120px;
+            max-height: 200px;
+        }
+
+        #boton {
+            background-color: rgb(56, 54, 88);
+            border: none;
+            color: rgb(223, 223, 223);
+            padding: 15px;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
 }
 
-.contacto:nth-of-type(1) {
-    grid-column: 3/4;
-    grid-row: 2/5;
+@media screen and (max-width: 480px) {
+    .grillaCont {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        height: 100vh;
+        column-gap: 10px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    .contacto:nth-of-type(1) {
+        grid-column: 1/3;
+        grid-row: 1/1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        letter-spacing: 5px;
+
+    }
+
+    .formulario:nth-of-type(2) {
+        grid-column: 1/3;
+        grid-row: 2/4;
+        justify-content: center;
+        align-items: flex-start;
+        width: 300px;
+        padding: 30px;
+        border-radius: 10px;
+        background-color: rgb(255, 255, 255);
+        box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+    }
+
+    .formulario label {
+        font-size: 12px;
+    }
+
+    .formulario textarea {
+        height: 100px;
+        max-height: 100px;
+    }
+
+    #boton {
+        background-color: rgb(56, 54, 88);
+        border: none;
+        color: rgb(223, 223, 223);
+        padding: 15px;
+    }
+
+    #boton:hover {
+        cursor: pointer;
+    }
 }
 
-.contacto h1 {
-    color: rgba(34, 34, 34, 0.76);
-    letter-spacing: 5px;
-}
-
-.formulario:nth-of-type(2) {
-    margin: auto;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    width: 400px;
-    grid-column: 5/9;
-    grid-row: 2/5;
-    padding: 30px;
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
-}
-
-.formulario input,
-textarea {
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    padding: 7px;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 1px solid rgba(77, 77, 77, 0.767);
-}
-
-.formulario label {
-    font-size: 15px;
-}
-
-.formulario textarea {
-    height: 120px;
-    max-height: 200px;
-}
-
-#boton {
-    background-color: rgb(56, 54, 88);
-    border: none;
-    color: rgb(223, 223, 223);
-    padding: 15px;
-}
-
-#boton:hover {
-    cursor: pointer;
+@media screen and (min-width: 481px) and (max-width: 760px) {
+    
 }
