--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -4,19 +4,22 @@ header {
     flex-flow: row-wrap;
     justify-content: space-between;
     padding: 10px;
-    background-color: rgba(24, 24, 24, 24);
+    background-color: $backgroundHeader;
 }
+
 .cabecera {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     padding: 20px;
-    background-color: rgb(24, 24, 24);
+    background-color: $backgroundHeader;
     align-items: center;
+
     img {
         max-width: 3rem;
     }
-    ul{
+
+    ul {
         width: 500px;
         display: flex;
         flex-flow: row wrap;
@@ -26,10 +29,12 @@ header {
         text-decoration: none;
         list-style-type: none;
     }
+
     li a {
         text-decoration: none;
-        color: #ffff;
+        color: $color_headerText;
         --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
+
         &:after {
             content: "";
             display: block;
@@ -40,13 +45,162 @@ header {
             clip-path: var(--clippy);
             transition: clip-path .4s;
         }
+
         &:hover {
             --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%);
         }
     }
 
-  }
-  .nav__hamburguesa,
-  .nav__close {
+}
+
+.nav__hamburguesa,
+.nav__close {
     display: none;
-  }
+}
+
+@media screen and (max-width: 480px) {
+
+    header {
+        grid-area: header;
+        // display: flex;
+        // flex-flow: column;
+        // justify-content: center;
+        // align-items: flex-end;
+    }
+
+    .cabecera {
+
+        // display: flex;
+        // background-color: rgb(24, 24, 24);
+        // background-size: cover;
+        // min-height: 500px;
+        // height: 100vh;
+        .nav {
+            --state-close: scale(0);
+            --state-hamburger: scale(1);
+            --state-menu: translate(-100%);
+            display: grid;
+            justify-content: space-between;
+
+            &:target {
+                --state-menu: translate(0);
+                --state-close: scale(1);
+                --state-hamburger: scale(0);
+            }
+        }
+
+        .nav__hamburguesa,
+        .nav__close {
+            display: unset;
+            cursor: pointer;
+            grid-column: 1/-1;
+            grid-row: 1/-1;
+            transition: .4s transform;
+            z-index: 1;
+        }
+
+        .nav__hamburguesa {
+            transform: var(--state-hamburger);
+        }
+
+        .nav__close {
+            transform: var(--state-close);
+        }
+
+        .nav__icon {
+            width: 40px;
+        }
+
+        img {
+            max-width: 3rem;
+        }
+
+        .cabecera__ul {
+            /* display: none; */
+            display: flex;
+            flex-flow: column;
+            justify-content: flex-start;
+            background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
+            height: 100vh;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 0;
+            display: grid;
+            align-content: center;
+            gap: 2rem;
+            padding-left: 5%;
+            transform: var(--state-menu);
+            transition: .3s transform;
+            z-index: 1;
+
+            li {
+                font-size: 1.2rem;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 760px) {
+    .cabecera{
+        .nav {
+            --state-close: scale(0);
+            --state-hamburger: scale(1);
+            --state-menu: translate(-100%);
+            display: grid;
+            justify-content: space-between;
+            &:target {
+                --state-menu: translate(0);
+                --state-close: scale(1);
+                --state-hamburger: scale(0);
+            }
+        }
+        .nav__hamburguesa,
+        .nav__close {
+            display: unset;
+            cursor: pointer;
+            grid-column: 1/-1;
+            grid-row: 1/-1;
+            transition: .4s transform;
+            z-index: 1;
+        }
+        .nav__hamburguesa {
+            transform: var(--state-hamburger);
+        }
+        .nav__close {
+            transform: var(--state-close);
+        }
+        .nav__icon {
+            width: 40px;
+        }
+        .cabecera img {
+            max-width: 3rem;
+        }
+        .cabecera__ul {
+            /* display: none; */
+            display: flex;
+            flex-flow: column;
+            justify-content: flex-start;
+            background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
+            height: 100vh;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 0;
+            display: grid;
+            align-content: center;
+            gap: 3rem;
+            padding-left: 5%;
+            transform: var(--state-menu);
+            transition: .3s transform;
+            z-index: 1;
+            li {
+                font-size: 1.2rem;
+            }
+        }
+    }
+}
