--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -8,7 +8,7 @@ main {
     grid-template-rows: repeat(5, 1fr);
     height: 100vh;
     column-gap: 10px;
-    background-color: rgba(211, 150, 106, 0.466);
+    background-color: $backgroundContenido;
 
     .grid__eM:nth-of-type(1) {
         grid-column: 2 / 8;
@@ -25,13 +25,14 @@ main {
         flex-flow: row-wrap;
         align-items: center;
     }
-    .grid__eM{
+
+    .grid__eM {
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
-    
+
         div {
             width: 65%;
             height: 35%;
@@ -40,7 +41,7 @@ main {
             display: flex;
             align-items: center;
         }
-    
+
         h1 {
             display: flex;
             justify-content: center;
@@ -48,9 +49,115 @@ main {
             color: rgb(63, 63, 63);
             padding: 5px;
         }
-    
+
         h2 {
             display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 480px) {
+    main {
+        grid-area: main;
+    }
+
+    .grid {
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        height: 100vh;
+        background-color: $backgroundContenido;
+
+        .grid__eM:nth-of-type(1) {
+            grid-column: 1 /6;
+            grid-row: 2/ 3;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+        }
+
+        .grid__eM:nth-of-type(2) {
+            grid-column: 2 / 5;
+            grid-row: 1 / 2;
+        }
+
+        .grid__eM {
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+
+            div {
+                margin: 25px;
+                height: 20%;
+                background-color: rgba(240, 240, 240, 0.39);
+                display: flex;
+                align-items: center;
+                border-radius: 6px;
+            }
+
+            h1 {
+                display: none;
+            }
+
+            h2 {
+                text-align: center;
+                font-size: 1em;
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                line-height: 1.5em;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 760px) {
+    main {
+        grid-area: main;
+    }
+
+    .grid {
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        height: 100vh;
+        background-color: $backgroundContenido;
+        .grid__eM:nth-of-type(1) {
+            grid-column: 1 /6;
+            grid-row: 2/ 3;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+        }
+        .grid__eM:nth-of-type(2) {
+            grid-column: 2 / 5;
+            grid-row: 1 / 2;
+        }
+        .grid__eM{
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+            div {
+                margin: 25px;
+                height: 20%;
+                background-color: rgba(240, 240, 240, 0.39);
+                display: flex;
+                align-items: center;
+                border-radius: 6px;
+            }
+            h1 {
+                display: none;
+            }
+            h2 {
+                text-align: center;
+                font-size: 1em;
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                line-height: 1.5em;
+            }
         }
     }
 }
