--- a/styles/partials/_porfolio.scss
+++ b/styles/partials/_porfolio.scss
@@ -44,6 +44,7 @@
         transform: scale(100%);
         -webkit-transition: .3s ease-in-out;
         transition: .3s ease-in-out;
+
         &:hover {
             -webkit-transform: scale(102%);
             transform: scale(102%);
@@ -52,3 +53,53 @@
     }
 }
 
+@media screen and (min-width: 481px) and (max-width: 760px) {
+    .grid__pO {
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        padding: 5px;
+        padding-top: 50px;
+        column-gap: 5px;
+        row-gap: 10px;
+    }
+
+    .grid__img1 {
+        grid-column: 2/7;
+        grid-row: 1/2;
+    }
+
+    .grid__img2 {
+        grid-column: 2/12;
+        grid-row: 2/3;
+    }
+
+    .grid__img3 {
+        grid-column: 7/12;
+        grid-row: 1/2;
+    }
+
+    .grid__pO div img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        -webkit-transform: scale(100%);
+        transform: scale(100%);
+        -webkit-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+        opacity: .9;
+    }
+
+    .grid__pO div img:hover {
+        -webkit-transform: scale(102%);
+        transform: scale(102%);
+        opacity: 1;
+    }
+
+    .pO__titulo {
+        font-size: 12px;
+        padding-top: 1rem;
+        padding-left: 25px;
+        letter-spacing: 0.3cm;
+    }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {}
