--- a/styles/partials/_servicios.scss
+++ b/styles/partials/_servicios.scss
@@ -8,10 +8,12 @@
     padding-left: 4em;
     column-gap: 1em;
     row-gap: 2em;
+
     h1 {
         color: rgb(63, 63, 63);
         cursor: default;
     }
+
     h3 {
         visibility: hidden;
         position: absolute;
@@ -21,6 +23,7 @@
         color: rgba(0, 0, 0, 0.76);
     }
 }
+
 .contenedor:nth-of-type(1) {
     grid-column: 1 / 1;
     grid-row: 1 / 3;
@@ -36,7 +39,7 @@
     padding-top: 5rem;
 }
 
-.contenedor:nth-of-type(2){
+.contenedor:nth-of-type(2) {
     grid-column: 2 / 6;
     grid-row: 2 / 3;
     display: flex;
@@ -46,6 +49,7 @@
     cursor: pointer;
     overflow: hidden;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+
     &:before {
         content: "Diseño";
         position: absolute;
@@ -63,6 +67,7 @@
         clip-path: var(--clippy2);
         transition: clip-path .4s ease-in-out;
     }
+
     &:hover {
         --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
     }
@@ -70,7 +75,7 @@
 
 
 
-.contenedor:nth-of-type(3){
+.contenedor:nth-of-type(3) {
     grid-column: 6 / 10;
     grid-row: 3 / 3;
     justify-content: center;
@@ -79,6 +84,7 @@
     cursor: pointer;
     overflow: hidden;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+
     &:before {
         content: "Edición";
         position: absolute;
@@ -96,7 +102,7 @@
         clip-path: var(--clippy2);
         transition: clip-path .4s ease-in-out;
     }
-    
+
     &:hover {
         --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
     }
@@ -111,6 +117,7 @@
     position: relative;
     cursor: pointer;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+
     &:before {
         content: "Animación";
         position: absolute;
@@ -128,10 +135,12 @@
         clip-path: var(--clippy2);
         transition: clip-path .4s ease-in-out;
     }
+
     &:hover {
         --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
     }
 }
+
 .contenedor:nth-of-type(5) {
     grid-column: 14 / 18;
     grid-row: 3 / 4;
@@ -141,6 +150,7 @@
     position: relative;
     cursor: pointer;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+
     &:before {
         content: "Foto y Video";
         position: absolute;
@@ -158,6 +168,7 @@
         clip-path: var(--clippy2);
         transition: clip-path .4s ease-in-out;
     }
+
     &:hover {
         --clippy2: polygon(100% 0, 0 0, 0 100%, 100% 100%);
     }
@@ -169,3 +180,63 @@
     object-fit: cover;
 }
 
+@media screen and (max-width: 480px) {
+    .grid__sE {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        padding-top: 0;
+        padding-left: 20px;
+        padding-right: 20px;
+        column-gap: 1.5em;
+        row-gap: 1.8em;
+    }
+
+    .contenedor:nth-of-type(1) {
+        grid-column: 2 / 6;
+        grid-row: 1 / 1;
+        width: 100%;
+        font-size: 15px;
+        letter-spacing: 10px;
+        padding-top: 1em;
+        display: flex;
+        justify-content: center;
+        text-transform: none;
+    }
+
+    .contenedor:nth-of-type(2) {
+        grid-column: 2 / 6;
+        grid-row: 2 / 3;
+        height: 100px;
+
+    }
+
+    .contenedor:nth-of-type(3) {
+        grid-column: 2 / 6;
+        grid-row: 3 / 4;
+        height: 100px;
+    }
+
+    .contenedor:nth-of-type(4) {
+        grid-column: 2 / 6;
+        grid-row: 4 / 5;
+        height: 100px;
+    }
+
+    .contenedor:nth-of-type(5) {
+        grid-column: 2 /6;
+        grid-row: 5 / 6;
+        height: 100px;
+    }
+
+    .grid__sE div img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+    }
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 760px) {
+    
+}
