--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -5,42 +5,53 @@
     background-color: rgba(211, 150, 106, 0.466);
     height: 100vh;
     padding: 8px;
-}
 
-.grid__sK div img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 
-.ae {
-    grid-column: 2 / 3;
-    grid-row: 4/5;
-}
+    h3 {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        position: relative;
+        bottom: 10%;
+        left: 45%;
+        color: rgba(34, 34, 34, 0.76);
+    }
 
-.pr {
-    grid-column: 4 / 5;
-    grid-row: 2/3;
-}
+    .ae {
+        grid-column: 2 / 3;
+        grid-row: 4/5;
+    }
 
-.ps {
-    grid-column: 5 / 6;
-    grid-row: 5/6;
-}
+    .pr {
+        grid-column: 4 / 5;
+        grid-row: 2/3;
+    }
 
-.ai {
-    grid-column: 7 / 8;
-    grid-row: 3/4;
-}
+    .ps {
+        grid-column: 5 / 6;
+        grid-row: 5/6;
+    }
 
-.id {
-    grid-column: 9 / 10;
-    grid-row: 5/6;
-}
+    .ai {
+        grid-column: 7 / 8;
+        grid-row: 3/4;
+    }
 
-.lr {
-    grid-column: 11 / 12;
-    grid-row: 3/4;
+    .id {
+        grid-column: 9 / 10;
+        grid-row: 5/6;
+    }
+
+    .lr {
+        grid-column: 11 / 12;
+        grid-row: 3/4;
+    }
+
 }
 
 .sK__titulo {
@@ -54,12 +65,63 @@
     font-size: 1.5em;
 }
 
-.grid__sK div h3 {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    position: relative;
-    bottom: 10%;
-    left: 45%;
-    color: rgba(34, 34, 34, 0.76);
+@media screen and (max-width: 480px) {
+    .grid__sK {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        padding-left: 80px;
+        padding-right: 80px;
+        column-gap: 50px;
+        row-gap: 40px;
+    }
+
+    .ae {
+        grid-column: 1 / 1;
+        grid-row: 1/2;
+    }
+
+    .pr {
+        grid-column: 2/ 2;
+        grid-row: 1/2;
+    }
+
+    .ps {
+        grid-column: 1 / 1;
+        grid-row: 2/3;
+    }
+
+    .ai {
+        grid-column: 2 / 2;
+        grid-row: 2/3;
+    }
+
+    .id {
+        grid-column: 1 / 1;
+        grid-row: 3/4;
+    }
+
+    .lr {
+        grid-column: 2 / 2;
+        grid-row: 3/4;
+    }
+
+    .sK__titulo {
+        font-weight: 100;
+        padding: 1rem;
+        font-size: 13px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .grid__sK div h3 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        bottom: 3%;
+        left: 0%;
+    }
+
 }
+
+@media screen and (min-width: 481px) and (max-width: 760px) {}
