--- a/styles/partials/_sobremi.scss
+++ b/styles/partials/_sobremi.scss
@@ -56,7 +56,109 @@
         border-radius: 5px;
     }
 }
-
+@media screen and (max-width: 480px) {
+    .grid__sM {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        height: 100vh;
+      }
+    
+      .grid__contenido:nth-of-type(1) {
+        grid-column: 2 / 6;
+        grid-row: 1 / 1;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 2rem;
+        letter-spacing: 0.5cm;
+        height: 100px;
+      }
+    
+      .grid__contenido:nth-of-type(2) {
+        grid-column: 2 / 6;
+        grid-row: 2 / 6;
+        font-size: 12px;
+        padding-top: 105px;
+      }
+    
+      .grid__contenido:nth-of-type(3) {
+        grid-column: 2 /6;
+        grid-row: 1 / 2;
+        line-height: 0.6cm;
+        padding-top: 85px;
+      }
+    
+      .grid__contenido h1 {
+        font-size: 25px;
+      }
+    
+      .grid__contenido img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-bottom-right-radius: 75px;
+        border-bottom-left-radius: 75px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+      }
+    
+      .grid__linea {
+        position: relative;
+        top: 5px;
+        width: 45px;
+      }    
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+    .grid__sM {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        height: 100vh;
+      }
+    
+      .grid__contenido:nth-of-type(1) {
+        grid-column: 2 / 6;
+        grid-row: 1 / 1;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 2rem;
+        letter-spacing: 0.5cm;
+        height: 100px;
+      }
+    
+      .grid__contenido:nth-of-type(2) {
+        grid-column: 2 / 6;
+        grid-row: 2 / 6;
+        font-size: 12px;
+        padding-top: 105px;
+      }
+    
+      .grid__contenido:nth-of-type(3) {
+        grid-column: 2 /6;
+        grid-row: 1 / 2;
+        line-height: 0.6cm;
+        padding-top: 85px;
+      }
+    
+      .grid__contenido h1 {
+        font-size: 25px;
+      }
+    
+      .grid__contenido img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-bottom-right-radius: 75px;
+        border-bottom-left-radius: 75px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+      }
+    
+      .grid__linea {
+        position: relative;
+        top: 5px;
+        width: 45px;
+      }
+     
+}
 
 
 
