--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,22 @@
   height: 100vh;
 }
 
+@media screen and (max-width: 480px) {
+  .grilla {
+    grid-template-areas: "header " "main" "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 16% auto 10%;
+    height: 100vh;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  .grilla {
+    grid-template-areas: "header " "main " "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 16% auto 10%;
+    height: 100vh;
+  }
+}
 header {
   grid-area: header;
   display: flex;
@@ -45,7 +61,7 @@ header {
 }
 .cabecera li a {
   text-decoration: none;
-  color: white;
+  color: rgb(233, 233, 233);
   --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
 }
 .cabecera li a:after {
@@ -70,6 +86,127 @@ header {
   display: none;
 }
 
+@media screen and (max-width: 480px) {
+  header {
+    grid-area: header;
+  }
+  .cabecera .nav {
+    --state-close: scale(0);
+    --state-hamburger: scale(1);
+    --state-menu: translate(-100%);
+    display: grid;
+    justify-content: space-between;
+  }
+  .cabecera .nav:target {
+    --state-menu: translate(0);
+    --state-close: scale(1);
+    --state-hamburger: scale(0);
+  }
+  .cabecera .nav__hamburguesa,
+.cabecera .nav__close {
+    display: unset;
+    cursor: pointer;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+    transition: 0.4s transform;
+    z-index: 1;
+  }
+  .cabecera .nav__hamburguesa {
+    transform: var(--state-hamburger);
+  }
+  .cabecera .nav__close {
+    transform: var(--state-close);
+  }
+  .cabecera .nav__icon {
+    width: 40px;
+  }
+  .cabecera img {
+    max-width: 3rem;
+  }
+  .cabecera .cabecera__ul {
+    /* display: none; */
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+    display: grid;
+    align-content: center;
+    gap: 2rem;
+    padding-left: 5%;
+    transform: var(--state-menu);
+    transition: 0.3s transform;
+    z-index: 1;
+  }
+  .cabecera .cabecera__ul li {
+    font-size: 1.2rem;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  .cabecera .nav {
+    --state-close: scale(0);
+    --state-hamburger: scale(1);
+    --state-menu: translate(-100%);
+    display: grid;
+    justify-content: space-between;
+  }
+  .cabecera .nav:target {
+    --state-menu: translate(0);
+    --state-close: scale(1);
+    --state-hamburger: scale(0);
+  }
+  .cabecera .nav__hamburguesa,
+.cabecera .nav__close {
+    display: unset;
+    cursor: pointer;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+    transition: 0.4s transform;
+    z-index: 1;
+  }
+  .cabecera .nav__hamburguesa {
+    transform: var(--state-hamburger);
+  }
+  .cabecera .nav__close {
+    transform: var(--state-close);
+  }
+  .cabecera .nav__icon {
+    width: 40px;
+  }
+  .cabecera .cabecera img {
+    max-width: 3rem;
+  }
+  .cabecera .cabecera__ul {
+    /* display: none; */
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+    display: grid;
+    align-content: center;
+    gap: 3rem;
+    padding-left: 5%;
+    transform: var(--state-menu);
+    transition: 0.3s transform;
+    z-index: 1;
+  }
+  .cabecera .cabecera__ul li {
+    font-size: 1.2rem;
+  }
+}
 main {
   grid-area: main;
 }
@@ -122,6 +259,100 @@ main {
   display: none;
 }
 
+@media screen and (max-width: 480px) {
+  main {
+    grid-area: main;
+  }
+  .grid {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    height: 100vh;
+    background-color: rgba(211, 150, 106, 0.466);
+  }
+  .grid .grid__eM:nth-of-type(1) {
+    grid-column: 1/6;
+    grid-row: 2/3;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .grid .grid__eM:nth-of-type(2) {
+    grid-column: 2/5;
+    grid-row: 1/2;
+  }
+  .grid .grid__eM img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .grid .grid__eM div {
+    margin: 25px;
+    height: 20%;
+    background-color: rgba(240, 240, 240, 0.39);
+    display: flex;
+    align-items: center;
+    border-radius: 6px;
+  }
+  .grid .grid__eM h1 {
+    display: none;
+  }
+  .grid .grid__eM h2 {
+    text-align: center;
+    font-size: 1em;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    line-height: 1.5em;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  main {
+    grid-area: main;
+  }
+  .grid {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    height: 100vh;
+    background-color: rgba(211, 150, 106, 0.466);
+  }
+  .grid .grid__eM:nth-of-type(1) {
+    grid-column: 1/6;
+    grid-row: 2/3;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .grid .grid__eM:nth-of-type(2) {
+    grid-column: 2/5;
+    grid-row: 1/2;
+  }
+  .grid .grid__eM img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .grid .grid__eM div {
+    margin: 25px;
+    height: 20%;
+    background-color: rgba(240, 240, 240, 0.39);
+    display: flex;
+    align-items: center;
+    border-radius: 6px;
+  }
+  .grid .grid__eM h1 {
+    display: none;
+  }
+  .grid .grid__eM h2 {
+    text-align: center;
+    font-size: 1em;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    line-height: 1.5em;
+  }
+}
 footer {
   grid-area: footer;
 }
@@ -158,6 +389,64 @@ footer {
   list-style-type: none;
 }
 
+@media screen and (max-width: 480px) {
+  footer {
+    grid-area: footer;
+  }
+  .pie {
+    padding: 15px;
+    height: 4rem;
+    background-color: rgba(211, 150, 106, 0.466);
+    align-items: flex-start;
+  }
+  .pie h2 {
+    font-size: 0.6rem;
+    font-weight: 120px;
+    color: rgb(63, 63, 63);
+  }
+  .pie img {
+    max-width: 1rem;
+  }
+  .pie .pie__ul {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem;
+    justify-content: space-evenly;
+  }
+  .pie .pie__ul li {
+    text-decoration: none;
+    list-style-type: none;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  footer {
+    grid-area: footer;
+  }
+  .pie {
+    padding: 15px;
+    height: 4rem;
+    background-color: rgba(211, 150, 106, 0.466);
+    align-items: flex-start;
+  }
+  .pie h2 {
+    font-size: 0.9rem;
+    font-weight: 120px;
+    color: rgb(63, 63, 63);
+  }
+  .pie img {
+    max-width: 2rem;
+  }
+  .pie .pie__ul {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 2rem;
+    justify-content: space-evenly;
+  }
+  .pie .pie__ul li {
+    text-decoration: none;
+    list-style-type: none;
+  }
+}
 .grid__sM {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -218,6 +507,98 @@ footer {
   border-radius: 5px;
 }
 
+@media screen and (max-width: 480px) {
+  .grid__sM {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 100vh;
+  }
+  .grid__contenido:nth-of-type(1) {
+    grid-column: 2/6;
+    grid-row: 1/1;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2rem;
+    letter-spacing: 0.5cm;
+    height: 100px;
+  }
+  .grid__contenido:nth-of-type(2) {
+    grid-column: 2/6;
+    grid-row: 2/6;
+    font-size: 12px;
+    padding-top: 105px;
+  }
+  .grid__contenido:nth-of-type(3) {
+    grid-column: 2/6;
+    grid-row: 1/2;
+    line-height: 0.6cm;
+    padding-top: 85px;
+  }
+  .grid__contenido h1 {
+    font-size: 25px;
+  }
+  .grid__contenido img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-bottom-right-radius: 75px;
+    border-bottom-left-radius: 75px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  .grid__linea {
+    position: relative;
+    top: 5px;
+    width: 45px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  .grid__sM {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 100vh;
+  }
+  .grid__contenido:nth-of-type(1) {
+    grid-column: 2/6;
+    grid-row: 1/1;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2rem;
+    letter-spacing: 0.5cm;
+    height: 100px;
+  }
+  .grid__contenido:nth-of-type(2) {
+    grid-column: 2/6;
+    grid-row: 2/6;
+    font-size: 12px;
+    padding-top: 105px;
+  }
+  .grid__contenido:nth-of-type(3) {
+    grid-column: 2/6;
+    grid-row: 1/2;
+    line-height: 0.6cm;
+    padding-top: 85px;
+  }
+  .grid__contenido h1 {
+    font-size: 25px;
+  }
+  .grid__contenido img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-bottom-right-radius: 75px;
+    border-bottom-left-radius: 75px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  .grid__linea {
+    position: relative;
+    top: 5px;
+    width: 45px;
+  }
+}
 .grid__pO {
   display: grid;
   grid-template-areas: "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3" "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3" "imagen2 imagen2 imagen2 imagen2 imagen3 imagen3 imagen3 imagen3 imagen3";
@@ -266,6 +647,48 @@ footer {
   filter: opacity(0.9);
 }
 
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  .grid__pO {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding: 5px;
+    padding-top: 50px;
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+    row-gap: 10px;
+  }
+  .grid__img1 {
+    grid-column: 2/7;
+    grid-row: 1/2;
+  }
+  .grid__img2 {
+    grid-column: 2/12;
+    grid-row: 2/3;
+  }
+  .grid__img3 {
+    grid-column: 7/12;
+    grid-row: 1/2;
+  }
+  .grid__pO div img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    transform: scale(100%);
+    transition: 0.3s ease-in-out;
+    opacity: 0.9;
+  }
+  .grid__pO div img:hover {
+    transform: scale(102%);
+    opacity: 1;
+  }
+  .pO__titulo {
+    font-size: 12px;
+    padding-top: 1rem;
+    padding-left: 25px;
+    letter-spacing: 0.3cm;
+  }
+}
 .grid__sE {
   display: grid;
   grid-template-columns: repeat(18, 1fr);
@@ -448,4 +871,267 @@ footer {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@media screen and (max-width: 480px) {
+  .grid__sE {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    padding-top: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    -moz-column-gap: 1.5em;
+         column-gap: 1.5em;
+    row-gap: 1.8em;
+  }
+  .contenedor:nth-of-type(1) {
+    grid-column: 2/6;
+    grid-row: 1/1;
+    width: 100%;
+    font-size: 15px;
+    letter-spacing: 10px;
+    padding-top: 1em;
+    display: flex;
+    justify-content: center;
+    text-transform: none;
+  }
+  .contenedor:nth-of-type(2) {
+    grid-column: 2/6;
+    grid-row: 2/3;
+    height: 100px;
+  }
+  .contenedor:nth-of-type(3) {
+    grid-column: 2/6;
+    grid-row: 3/4;
+    height: 100px;
+  }
+  .contenedor:nth-of-type(4) {
+    grid-column: 2/6;
+    grid-row: 4/5;
+    height: 100px;
+  }
+  .contenedor:nth-of-type(5) {
+    grid-column: 2/6;
+    grid-row: 5/6;
+    height: 100px;
+  }
+  .grid__sE div img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+.grid__sK {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  background-color: rgba(211, 150, 106, 0.466);
+  height: 100vh;
+  padding: 8px;
+}
+.grid__sK img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.grid__sK h3 {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  position: relative;
+  bottom: 10%;
+  left: 45%;
+  color: rgba(34, 34, 34, 0.76);
+}
+.grid__sK .ae {
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+.grid__sK .pr {
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
+.grid__sK .ps {
+  grid-column: 5/6;
+  grid-row: 5/6;
+}
+.grid__sK .ai {
+  grid-column: 7/8;
+  grid-row: 3/4;
+}
+.grid__sK .id {
+  grid-column: 9/10;
+  grid-row: 5/6;
+}
+.grid__sK .lr {
+  grid-column: 11/12;
+  grid-row: 3/4;
+}
+
+.sK__titulo {
+  background-color: rgba(211, 150, 106, 0.466);
+  color: rgb(63, 63, 63);
+  font-weight: 100;
+  padding: 2rem;
+  display: flex;
+  justify-content: flex-end;
+  letter-spacing: 10px;
+  font-size: 1.5em;
+}
+
+@media screen and (max-width: 480px) {
+  .grid__sK {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding-left: 80px;
+    padding-right: 80px;
+    -moz-column-gap: 50px;
+         column-gap: 50px;
+    row-gap: 40px;
+  }
+  .ae {
+    grid-column: 1/1;
+    grid-row: 1/2;
+  }
+  .pr {
+    grid-column: 2/2;
+    grid-row: 1/2;
+  }
+  .ps {
+    grid-column: 1/1;
+    grid-row: 2/3;
+  }
+  .ai {
+    grid-column: 2/2;
+    grid-row: 2/3;
+  }
+  .id {
+    grid-column: 1/1;
+    grid-row: 3/4;
+  }
+  .lr {
+    grid-column: 2/2;
+    grid-row: 3/4;
+  }
+  .sK__titulo {
+    font-weight: 100;
+    padding: 1rem;
+    font-size: 13px;
+    display: flex;
+    justify-content: center;
+  }
+  .grid__sK div h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 3%;
+    left: 0%;
+  }
+}
+.grillaCont {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  height: 100vh;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  background-color: rgba(211, 150, 106, 0.466);
+}
+.grillaCont .contacto h1 {
+  color: rgba(34, 34, 34, 0.76);
+  letter-spacing: 5px;
+}
+.grillaCont .contacto:nth-of-type(1) {
+  grid-column: 3/4;
+  grid-row: 2/5;
+}
+.grillaCont .formulario:nth-of-type(2) {
+  margin: auto;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 400px;
+  grid-column: 5/9;
+  grid-row: 2/5;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+}
+.grillaCont .formulario input,
+.grillaCont .formulario textarea {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding: 7px;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid rgba(77, 77, 77, 0.767);
+}
+.grillaCont .formulario label {
+  font-size: 15px;
+}
+.grillaCont .formulario textarea {
+  height: 120px;
+  max-height: 200px;
+}
+.grillaCont .formulario #boton {
+  background-color: rgb(56, 54, 88);
+  border: none;
+  color: rgb(223, 223, 223);
+  padding: 15px;
+}
+.grillaCont .formulario #boton:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 480px) {
+  .grillaCont {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    height: 100vh;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .contacto:nth-of-type(1) {
+    grid-column: 1/3;
+    grid-row: 1/1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 5px;
+  }
+  .formulario:nth-of-type(2) {
+    grid-column: 1/3;
+    grid-row: 2/4;
+    justify-content: center;
+    align-items: flex-start;
+    width: 300px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+  }
+  .formulario label {
+    font-size: 12px;
+  }
+  .formulario textarea {
+    height: 100px;
+    max-height: 100px;
+  }
+  #boton {
+    background-color: rgb(56, 54, 88);
+    border: none;
+    color: rgb(223, 223, 223);
+    padding: 15px;
+  }
+  #boton:hover {
+    cursor: pointer;
+  }
 }/*# sourceMappingURL=styles.css.map */
