Agrego maps en header

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -36,6 +36,7 @@
     height: 100vh;
   }
 }
+@import "./partials/maps";
 @import "./partials/colores";
 @import "./partials/header";
 @import "./partials/main";
