--- a/styles/partials/_maps.scss
+++ b/styles/partials/_maps.scss
@@ -1,18 +1,20 @@
-$colores: (
-    backgroundHeader: rgb(148, 28, 28),
+$color: (
+    backgroundCabeza:rgb(24, 24, 24),
     color_headerText: rgb(233, 233, 233),
     backgroundContenido:rgba(211, 150, 106, 0.466),
     color_textTitulo: rgb(63, 63, 63)
 );
-
-$tamaños: (
-    textTitulo: ,
-    textSubtit: ,
-    textParrafo: 
+$tamanos: (
+    textNavMin: 1.2rem,
+    textTituloMin: 1rem,
+    textTituloMed: 1.3rem,
+    textTituloMax: 1.8rem
 );
 
 $espaciado: (
     espaciadoMin: 2rem,
-    espaciadoMed: ,
-    espaciadoMax: 5rem
+    espaciadoMed: 3.5rem,
+    espaciadoPieMed: 1.8rem,
+    espaciadoMax: 5rem,
+    espaciadoNavMax: 2.3rem
 );
