--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(7, 1fr);
-    background-color: rgba(211, 150, 106, 0.466);
+    background-color: map-get($color,backgroundContenido);
     height: 100vh;
     padding: 8px;
 
@@ -55,8 +55,8 @@
 }
 
 .sK__titulo {
-    background-color: rgba(211, 150, 106, 0.466);
-    color: rgb(63, 63, 63);
+    background-color: map-get($color,backgroundContenido);
+    color: map-get($color,color_textTitulo);
     font-weight: 100;
     padding: 2rem;
     display: flex;
