--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -39,6 +39,7 @@
 
 @import "./partials/maps";
 @import "./partials/colores";
+@import "./partials/extends";
 @import "./partials/header";
 @import "./partials/main";
 @import "./partials/footer";
