--- a/styles/partials/_extends.scss
+++ b/styles/partials/_extends.scss
@@ -1,26 +1,48 @@
-%cabeceraDefaul{
+%cabeceraDefaul {
     display: flex;
     flex-flow: row-wrap;
     justify-content: space-between;
-    background-color:map-get($color,backgroundCabeza);
+    background-color: map-get($color, backgroundCabeza);
 }
 
-// %cabeceraUl{
-//     display: flex;
-//     flex-flow: column;
-//     justify-content: flex-start;
-//     background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(90, 117, 175, 0.712));
-//     height: 100vh;
-//     position: absolute;
-//     top: 0;
-//     bottom: 0;
-//     left: 0;
-//     right: 0;
-//     padding: 0;
-//     display: grid;
-//     align-content: center;
-//     gap: map-get($espaciado, espaciadoMin);
-//     padding-left: 5%;
-//     transform: var(--state-menu);
-//     transition: .3s transform;
-// }
+%cabeceraNav {
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(90, 117, 175, 0.712));
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+    display: grid;
+    align-content: center;
+    gap: map-get($espaciado, espaciadoMin);
+    padding-left: 5%;
+    transform: var(--state-menu);
+    transition: .3s transform;
+}
+
+%radioImagen {
+    border-bottom-right-radius: 75px;
+    border-bottom-left-radius: 75px;
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px;
+}
+
+%cajaTitulo {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.479);
+    color: rgb(211, 211, 211);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 0.3em;
+    clip-path: var(--clippy2);
+    transition: clip-path .4s ease-in-out;
+}
