--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -8,7 +8,7 @@ main {
     grid-template-rows: repeat(5, 1fr);
     height: 100vh;
     column-gap: 10px;
-    background-color: $backgroundContenido;
+    background-color: map-get($color, backgroundContenido);
 
     .grid__eM:nth-of-type(1) {
         grid-column: 2 / 8;
