--- a/styles/partials/_servicios.scss
+++ b/styles/partials/_servicios.scss
@@ -33,24 +33,20 @@
     width: 5px;
     font-size: 1rem;
     line-height: 4em;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    @include espaciado(flex, flex-start);
     padding-top: 5rem;
 }
 
 .contenedor:nth-of-type(2) {
     grid-column: 2 / 6;
     grid-row: 2 / 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include espaciado(flex, center);
     position: relative;
     cursor: pointer;
     overflow: hidden;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 
-    &:before {
+    &::before {
         content: "Diseño";
         position: absolute;
         @extend %cajaTitulo;
@@ -65,14 +61,13 @@
 .contenedor:nth-of-type(3) {
     grid-column: 6 / 10;
     grid-row: 3 / 3;
-    justify-content: center;
-    align-items: center;
+    @include espaciado(flex, center);
     position: relative;
     cursor: pointer;
     overflow: hidden;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 
-    &:before {
+    &::before {
         content: "Edición";
         position: absolute;
         @extend %cajaTitulo;
@@ -87,14 +82,12 @@
 .contenedor:nth-of-type(4) {
     grid-column: 10 / 14;
     grid-row: 2 / 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include espaciado(flex, center);
     position: relative;
     cursor: pointer;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 
-    &:before {
+    &::before {
         content: "Animación";
         position: absolute;
         @extend %cajaTitulo;
@@ -109,14 +102,12 @@
 .contenedor:nth-of-type(5) {
     grid-column: 14 / 18;
     grid-row: 3 / 4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include espaciado(flex, center);
     position: relative;
     cursor: pointer;
     --clippy2: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 
-    &:before {
+    &::before {
         content: "Foto y Video";
         position: absolute;
         @extend %cajaTitulo;
@@ -159,8 +150,8 @@
             grid-column: 2 / 6;
             grid-row: 2 / 3;
             height: 100px;
-            &:before {
-                font-size: 0.8rem;
+            &::before {
+                font-size: 1.2rem;
             }
     
         }
@@ -169,18 +160,27 @@
             grid-column: 2 / 6;
             grid-row: 3 / 4;
             height: 100px;
+            &::before{
+                font-size: 1.2rem;
+            }
         }
     
         .contenedor:nth-of-type(4) {
             grid-column: 2 / 6;
             grid-row: 4 / 5;
             height: 100px;
+            &::before{
+                font-size: 1.2rem;
+            }
         }
     
         .contenedor:nth-of-type(5) {
             grid-column: 2 /6;
             grid-row: 5 / 6;
             height: 100px;
+            &::before{
+                font-size: 1.2rem;
+            }
         }
         img {
             width: 100%;
