--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,14 @@
+@import "./partials/maps";
+@import "./partials/extends";
+@import "./partials/_mixins";
+@import "./partials/header";
+@import "./partials/main";
+@import "./partials/footer";
+@import "./partials/sobremi";
+@import "./partials/porfolio";
+@import "./partials/servicios";
+@import "./partials/skills";
+@import "./partials/contacto";
 * {
   margin: 0;
   padding: 0;
@@ -37,13 +48,3 @@
   }
 }
 
-@import "./partials/maps";
-@import "./partials/extends";
-@import "./partials/header";
-@import "./partials/main";
-@import "./partials/footer";
-@import "./partials/sobremi";
-@import "./partials/porfolio";
-@import "./partials/servicios";
-@import "./partials/skills";
-@import "./partials/contacto";
