--- a/styles/partials/_porfolio.scss
+++ b/styles/partials/_porfolio.scss
@@ -1,35 +1,51 @@
 .grid__pO {
     display: grid;
-    grid-template-areas:
-        "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3"
-        "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3"
-        "imagen2 imagen2 imagen2 imagen2 imagen3 imagen3 imagen3 imagen3 imagen3";
     grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     height: 100vh;
-    padding: 5rem;
+    padding: 1.5rem;
+    padding-bottom: 230px;
     column-gap: 10px;
     row-gap: 10px;
     background-color: map-get($color,backgroundContenido );
 }
 
-.grid__img1 {
-    grid-area: imagen1;
+.grid__img:nth-of-type(1) {
+    grid-column: 1/4;
+    grid-row: 1/2;
 }
 
-.grid__img2 {
-    grid-area: imagen2;
+.grid__img:nth-of-type(2) {
+    grid-column: 1/4;
+    grid-row: 2/3;
 }
 
-.grid__img3 {
-    grid-area: imagen3;
+.grid__img:nth-of-type(3) {
+    grid-column: 7/10;
+    grid-row: 1/3;
+}
+.grid__img:nth-of-type(4) {
+    grid-column: 4/7;
+    grid-row: 3/4;
+}
+.grid__img:nth-of-type(5) {
+    grid-column: 1/4;
+    grid-row: 3/4;
+}
+.grid__img:nth-of-type(6) {
+    grid-column: 4/7;
+    grid-row: 1/3;
+}
+.grid__img:nth-of-type(7) {
+    grid-column: 7/10;
+    grid-row: 3/4;
 }
 
 .pO__titulo {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 5rem;
+    padding-top: 4rem;
     background-color: map-get($color,backgroundContenido );
     letter-spacing: 0.5cm;
     color: map-get($color,color_textTitulo );
@@ -39,7 +55,7 @@
     div img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         -webkit-transform: scale(100%);
         transform: scale(100%);
         -webkit-transition: .3s ease-in-out;
