--- a/styles/partials/_servicios.scss
+++ b/styles/partials/_servicios.scss
@@ -122,7 +122,7 @@
 .contenedor img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 @media screen and (max-width: 480px) {
@@ -185,7 +185,7 @@
         img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
     
         }
     }
@@ -240,7 +240,7 @@
         img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
     
         }
     
