--- a/styles/styles.css
+++ b/styles/styles.css
@@ -374,9 +374,6 @@ footer {
   font-size: 2.3rem;
   color: black;
 }
-.pie img {
-  max-width: 2.3rem;
-}
 .pie .pie__ul {
   display: flex;
   flex-flow: row wrap;
@@ -402,8 +399,9 @@ footer {
     font-weight: 120px;
     color: rgb(63, 63, 63);
   }
-  .pie img {
-    max-width: 1rem;
+  .pie .bx {
+    font-size: 1rem;
+    color: black;
   }
   .pie .pie__ul {
     display: flex;
@@ -430,8 +428,9 @@ footer {
     font-weight: 120px;
     color: rgb(63, 63, 63);
   }
-  .pie img {
-    max-width: 1.5rem;
+  .pie .bx {
+    font-size: 1.5rem;
+    color: black;
   }
   .pie .pie__ul {
     display: flex;
@@ -583,34 +582,57 @@ footer {
 }
 .grid__pO {
   display: grid;
-  grid-template-areas: "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3" "imagen1 imagen1 imagen1 imagen1 imagen3 imagen3 imagen3 imagen3 imagen3" "imagen2 imagen2 imagen2 imagen2 imagen3 imagen3 imagen3 imagen3 imagen3";
   grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   height: 100vh;
-  padding: 5rem;
+  padding: 1.5rem;
+  padding-bottom: 230px;
   -moz-column-gap: 10px;
        column-gap: 10px;
   row-gap: 10px;
   background-color: rgba(211, 150, 106, 0.466);
 }
 
-.grid__img1 {
-  grid-area: imagen1;
+.grid__img:nth-of-type(1) {
+  grid-column: 1/4;
+  grid-row: 1/2;
 }
 
-.grid__img2 {
-  grid-area: imagen2;
+.grid__img:nth-of-type(2) {
+  grid-column: 1/4;
+  grid-row: 2/3;
 }
 
-.grid__img3 {
-  grid-area: imagen3;
+.grid__img:nth-of-type(3) {
+  grid-column: 7/10;
+  grid-row: 1/3;
+}
+
+.grid__img:nth-of-type(4) {
+  grid-column: 4/7;
+  grid-row: 3/4;
+}
+
+.grid__img:nth-of-type(5) {
+  grid-column: 1/4;
+  grid-row: 3/4;
+}
+
+.grid__img:nth-of-type(6) {
+  grid-column: 4/7;
+  grid-row: 1/3;
+}
+
+.grid__img:nth-of-type(7) {
+  grid-column: 7/10;
+  grid-row: 3/4;
 }
 
 .pO__titulo {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 5rem;
+  padding-top: 4rem;
   background-color: rgba(211, 150, 106, 0.466);
   letter-spacing: 0.5cm;
   color: rgb(63, 63, 63);
@@ -619,8 +641,8 @@ footer {
 .grid__pO div img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
   transform: scale(100%);
   transition: 0.3s ease-in-out;
 }
@@ -834,8 +856,8 @@ footer {
 .contenedor img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media screen and (max-width: 480px) {
@@ -895,8 +917,8 @@ footer {
   .grid__sE img {
     width: 100%;
     height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 760px) {
@@ -944,8 +966,8 @@ footer {
   .grid__sE img {
     width: 100%;
     height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   .grid__sE h3 {
     font-size: 10px;
